@@ -982,3 +982,4 @@ Added a button to the Edit Mailbox page for logging into Usermin as a user witho
 On FreeBSD, the Gnu tar command gtar is used in preference to regular tar when installed. This allows incremental backups to be performed.
 When MySQL is on a remote system, the 'show table status' command is used to get an approximate size for each database.
 Added the notify-domains.pl command line script, for sending email to some or all virtual server owners.
+Added a Module Config option to have only one spamassassin process run at a time.
